# decision-engine

./: .editorconfig  .env.dev.example  .env.test.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 67ef65f6a5da_init.py
docker/postgres/: init.sql
docs/: mvp.md
scripts/: build_context.sh  build_delta.sh  check_architecture.sh  context.sh  delta.sh  snapshot.sh  verify.sh
src/app/: cli.py  main.py
src/app/api/: dependencies.py
src/app/bootstrap/: bootstrap.py  config.py  container.py  wiring.py
src/app/config/: bootstrap.py  container.py  settings.py
src/app/domain/: domain_entity.py
src/app/services/: decision_service.py
tests/: conftest.py
tests/api/: test_decisions_route.py  test_decisions_router.py  test_events_route.py  test_events_router.py  test_register_event_api.py  test_rules_route.py  test_rules_router.py
tests/api/handlers/: test_produce_decision_handler.py  test_register_event_handler.py  test_register_rule_handler.py
tests/application/: test_decision_outcome_to_status_mapper.py  test_decision_status.py  test_produce_decision_dto_request.py  test_produce_decision_dto_response.py  test_produce_decision_use_case.py  test_register_event_request.py  test_register_event_response.py  test_register_event_use_case.py  test_register_rule_use_case.py
tests/application/dto/: test_produce_decision_dto_request.py  test_produce_decision_dto_response.py  test_register_event_dto_request.py  test_register_event_dto_response.py  test_register_rule_dto_request.py  test_register_rule_dto_response.py
tests/domain/: test_decision_engine.py  test_decision_service.py  test_domain_entity.py  test_event.py  test_rule.py
tests/fixtures/: condition.py  decision.py  decision_trace.py  event.py  rule.py
tests/infrastructure/: test_event_repository.py  test_in_memory_decision_repository.py  test_in_memory_event_repository.py  test_in_memory_rule_repository.py  test_sql_decision_repository.py  test_sql_event_repository.py  test_sql_rule_repository.py
tests/test_api/: test_http_error_code_mapper.py
tests/test_infrastructure/: conftest.py
tests/utils/: domain_entity_util.py
(+265 files in other folders)
