[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-engine"
version = "0.1.0"
description = "Backend system for deterministic rule evaluation with explicit domain modeling and controlled transaction boundaries"
dependencies = [
    "fastapi",
    "httpx",
    "pyright",
    "pytest",
    "ruff",
    "sqlalchemy",
    "typer",
    "uvicorn"
]

[project.scripts]
decision-engine = "app.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
