[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-engine"
version = "0.6.0"
description = "Deterministic rule engine with full execution traceability"
dependencies = [
    "alembic",
    "fastapi",
    "httpx",
    "psycopg[binary]",
    "pyright",
    "pytest",
    "python-dotenv",
    "ruff",
    "sqlalchemy",
    "typer",
    "uvicorn"
]

[project.scripts]
decision-engine = "app.cli:cli"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.setuptools.packages.find]
where = ["src"]
